# bikeActions

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  train.py
data/bikeScenes_test/: a01_ID0_0.json  a01_ID1_0.json  a01_ID2_0.json  a01_ID3_0.json  a01_ID4_0.json  a01_ID5_0.json  a01_ID6_0.json  a02_ID0_0.json  a02_ID11_0.json  a02_ID14_0.json  a02_ID2_0.json  a02_ID2_1.json  a02_ID3_0.json  a02_ID4_0.json  a02_ID5_0.json  a02_ID6_0.json  a02_ID7_0.json  a02_ID8_0.json  a03_ID0_0.json  a03_ID12_0.json  a03_ID3_0.json  a03_ID3_1.json  a03_ID4_0.json  a03_ID4_1.json  a03_ID5_0.json  a04_ID0_0.json  a04_ID1_0.json  a04_ID2_0.json  a04_ID4_0.json  a04_ID6_0.json  a05_ID0_0.json  a06_ID0_1.json  a06_ID10_0.json  a06_ID12_0.json  a06_ID1_0.json  a06_ID2_0.json  a06_ID5_0.json  a06_ID7_0.json  a06_ID8_0.json  a06_ID9_0.json  (+764 more)
data/splits/: split.json  test.txt  train.txt  validation.txt
src/bikeact/: __init__.py  dataset.py  evaluate.py  infer.py  labels.py  model.py  preprocess.py  viz.py
tests/: test_pipeline.py
